# xalloc

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  main.c  main.cpp  xalloc.h
.github/workflows/: ci.yml  cmake.yml
cmake/: CompilerFlags.cmake
examples/: CMakeLists.txt  allocator_storage.cpp
include/xalloc/: allocator_provider.h  allocator_traits.h  config.h  default_allocator.h  error.h  heap_allocator.h  memory_arena.h  smart_ptr.h  std_allocator.h  xalloc.h
src/: CMakeLists.txt  error.cpp  heap_allocator.cpp  memory_arena.cpp
